@@ -1,4 +1,5 @@
 0.37 (in development):
+	* Fixed bug when links and media is not recognized in retweets
 
 0.36:
 	* Fixed bug with disappeared services icons
